<resources>
    <string name="app_name">eco</string>
    <string name="home">Home</string>
    <string name="etiquete">Etiquete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floatingactionbutton">popo</string>
    <string name="add">add</string>
    <string name="titleProject"></string>
    <string name="place">Lugar n</string>
    <string name="album">Álbumes</string>
    <string name="albumName"></string>
    <string name="welcome">Hola, n!</string>
    <string name="project">Proyectos</string>
    <string name="text">Aquí podrás ver todas las etiquetas que tienes para seleccionar :)</string>
    <string name="welcomeEtiquete">Bienvenido a las etiquetas!</string>
    <string name="albumTitle">Album</string>
    <string-array name="cosas">
        <item>Sepa1</item>
        <item>Sepa2</item>
        <item>Sepa3</item>

    </string-array>
</resources>