<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EtiquetesFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/welcomeLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/welcome"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center_vertical"
            />

        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile_foreground"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/etiquetesLbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeEtiquete"
        android:textSize="28sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/explanationLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/greySubtitle"
        android:layout_margin="20dp"
        />


</LinearLayout>
</layout>