<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="5dp"
    android:layout_margin="10dp"
    android:backgroundTint="@color/rectangle"
    >



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iconDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@drawable/ic_launcher_background"
            />

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:padding="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/projectItem"
                android:text="@string/titleProject"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/place"
                android:text="@string/place"
                android:textColor="@color/greySubtitle"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginLeft="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/album"
                android:text="@string/album"
                android:textColor="@color/greySubtitle"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginLeft="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/mMenus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="top"
                android:src="@drawable/ic_more"
                android:layout_marginLeft="5dp"
                app:tint="@android:color/darker_gray"
                />

            <ImageView
                android:id="@+id/nextBtn"
                android:src="@drawable/baseline_navigate_next_24"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>